[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PoseScoring"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
description = "Tools to generate data suitable for loading into Fragalysis"
dependencies = [
    "numpy<2.0",
    "scipy",
    "joblib",
    "scikit-learn",
    "hdbscan",
    "matplotlib",
    "rich",
    "seaborn",
    "rdkit",
    "ray",
    "fire",
    "bokeh",
    'scikit-image',
    'gemmi'
] # Add project dependencies here, e.g. ["click", "numpy"]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
addopts = "-x"
testpaths = ['tests']
